--- a/template.html
+++ b/template.html
@@ -5,7 +5,6 @@
 		<title>Example Title</title>
 	</head>
 	<body>
--		<h1>Heading Example</h1>
--		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vestibulum ante in nisi imperdiet eget ultricies lectus volutpat. Morbi in sapien quis lacus egestas tempor vel quis nunc. Fusce luctus leo ut massa posuere convallis. Quisque fringilla convallis ipsum nec vulputate. Aenean nisl lacus, tempus et volutpat vel, auctor sed nunc. Morbi porttitor mi non nisl imperdiet sed vulputate erat elementum. Duis quis nunc ac sem mollis mattis. Mauris quis nunc sit amet massa tristique laoreet egestas et justo.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sapien magna, convallis ac gravida sit amet, mattis quis elit. Phasellus eget ante nisi. Etiam ac metus in sem eleifend consequat vitae id velit. Morbi vitae purus est, id auctor justo. Aliquam ligula purus, sagittis quis ullamcorper vulputate, adipiscing ac enim. Integer dolor purus, pharetra id luctus a, suscipit a tellus. Nulla facilisi. Proin in purus turpis, laoreet cursus dolor.</p>
 	</body>
 </html>
