--- a/template.html
+++ b/template.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Example Title</title>
+		<h1>Lorem Ipsum</h1>
 	</head>
 	<body>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sapien magna, convallis ac gravida sit amet, mattis quis elit. Phasellus eget ante nisi. Etiam ac metus in sem eleifend consequat vitae id velit. Morbi vitae purus est, id auctor justo. Aliquam ligula purus, sagittis quis ullamcorper vulputate, adipiscing ac enim. Integer dolor purus, pharetra id luctus a, suscipit a tellus. Nulla facilisi. Proin in purus turpis, laoreet cursus dolor.</p>
