--- a/validation_check.html
+++ b/validation_check.html
@@ -1,16 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<meta charset="utf-8" />
 <a href="http://www.rikcat.com/">www.rikcat.com</a>
 
-This site is like a portfolio for an artist named Rik Catlow. It did not pass the validation on either HTML validator. In one validator all of the errors were because he did not close empty tags like <meta> or <link>. There were 8 errors in total. He can fix these by simply closing the tags. On the other validator the errors were either because his img element didn’t have an alt attribute or because the div was not allowed as a child element ul. To fix these all he has to do is add an alt attribute to his img element and take out the divs and adding the class element to the li. There were 22 errors in total.
+<p>This site is like a portfolio for an artist named Rik Catlow. It did not pass the validation on either HTML validator. In one validator all of the errors were because he did not close empty tags like <meta> or <link>. There were 8 errors in total. He can fix these by simply closing the tags. On the other validator the errors were either because his img element didn’t have an alt attribute or because the div was not allowed as a child element ul. To fix these all he has to do is add an alt attribute to his img element and take out the divs and adding the class element to the li. There were 22 errors in total.</p>
 
 
 <a href="http://www.corporateriskwatch.com/">www.corporateriskwatch.com</a>
 
-This is a site that helps create a transparent, ethically sound business environment. This website passed in the Lint validator, but it had 2 errors in the other validator. Both were dealing with the legacy doctype. This is not really a problem because the validator is not for HTML5.
+<p>This is a site that helps create a transparent, ethically sound business environment. This website passed in the Lint validator, but it had 2 errors in the other validator. Both were dealing with the legacy doctype. This is not really a problem because the validator is not for HTML5.</p>
 
 <a href="http://www.jaradjohnson.com/">www.jaradjohnson.com</a>
 
-This site is like a portfolio for an interactive designer named Jarad Johnson. Like the previous website it passed in the Lint validator, but it had 2 errors in the other validator. Both were dealing with the legacy doctype. This is not really a problem because the validator is not for HTML5.
+<p>This site is like a portfolio for an interactive designer named Jarad Johnson. Like the previous website it passed in the Lint validator, but it had 2 errors in the other validator. Both were dealing with the legacy doctype. This is not really a problem because the validator is not for HTML5.</p>
 
 <a href="http://alldaycreative.co.uk/">http://alldaycreative.co.uk/</a>
 
-This is a site for a man who is a freelance copywriter looking for work. In the lint validator he only had two errors. One was because he didn’t close an empty tag and the other was because he didn’t quote the class attribute. In the other validator there was 14 errors. These errors were either because the attribute property not allowed on a certain element or because an element was not allowed as child of element span in this context. These can be fixed by the designer going back and naming the attributes the correct name and removing the headers from the span elements because block elements can’t go in inline elements.
+<p>This is a site for a man who is a freelance copywriter looking for work. In the lint validator he only had two errors. One was because he didn’t close an empty tag and the other was because he didn&apos;t quote the class attribute. In the other validator there was 14 errors. These errors were either because the attribute property not allowed on a certain element or because an element was not allowed as child of element span in this context. These can be fixed by the designer going back and naming the attributes the correct name and removing the headers from the span elements because block elements cannot go in inline elements.</p>
