--- a/validation_check.html
+++ b/validation_check.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="utf-8" />
+<head>
+	<meta charset="utf-8" />
+</head>
 <a href="http://www.rikcat.com/">www.rikcat.com</a>
 
 <p>This site is like a portfolio for an artist named Rik Catlow. It did not pass the validation on either HTML validator. In one validator all of the errors were because he did not close empty tags like <meta> or <link>. There were 8 errors in total. He can fix these by simply closing the tags. On the other validator the errors were either because his img element didn’t have an alt attribute or because the div was not allowed as a child element ul. To fix these all he has to do is add an alt attribute to his img element and take out the divs and adding the class element to the li. There were 22 errors in total.</p>
