Input first half of content

--- a/index.html
+++ b/index.html
@@ -1,3 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="utf-8" />
+	<head>
+		<meta charset="utf-8" />
+		<title>French Waffles</title>
+	</head>
+	<body>
+		<h1> <a href="">How to Make French Waffles</a></h1>
+			<ul>
+				<li> <a href=#"what">What is French Waffles</a></li>
+				<li> <a href="#make">How to Make French Waffles</a></li>
+			</ul>
+		<h2 id="what">What is French Waffles</h2>
+			<p>Don't have time to make a fancy breakfast? French Toast Waffles is a quick and easy way to make french toast out of everyone's favorite breakfast...waffles!</p>
+		<h2 id="make">How to make French Waffles</h2>
+		<h3>Ingredients:</h3>
+			<ul>
+				<li>2 eggs</li>
+				<li>Waffles(any brand)</li>
+				<li>Milk</li>
+				<li>Bowl</li>
+				<li>Fork</li>
+				<li>Frying pan</li>
+			</ul>
+		<h3>Instructions:</h3>
+			<ol>
+				<li>Pour eggs and milk into bowl and stir</li>
+				<li>Put waffle into bowl with mixture and flip on both sides</li>
+				<li>Put frying pan on 7</li>
+				<li>Place waffle into pan and flip until it's a nice golden color</li>
+				<li>Let it cool and enjoy!</li>
+			</ol>
+		
+		
+	
+	
