--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
 		<title>French Waffles</title>
 	</head>
 	<body>
-		<h1> <a href="">How to Make French Waffles</a></h1>
-			<ul>
+<div id="wrapper">
+		<div id="header"><h1> <a href="">How to Make French Waffles</a></h1>
+			<div id="nav"><ul>
 				<li> <a href=#"what">What is French Waffles</a></li>
 				<li> <a href="#make">How to Make French Waffles</a></li>
 			</ul>
-		<h2 id="what">What is French Waffles</h2>
+			</div> <!-- nav -->
+		</div> <!-- header -->
+		<div id="content"><h2 id="what">What is French Waffles</h2>
 			<p>Don't have time to make a fancy breakfast? French Toast Waffles is a quick and easy way to make french toast out of everyone's favorite breakfast...waffles!</p>
 		<h2 id="make">How to make French Waffles</h2>
 		<h3>Ingredients:</h3>
@@ -30,7 +33,11 @@
 				<li>Place waffle into pan and flip until it's a nice golden color</li>
 				<li>Let it cool and enjoy!</li>
 			</ol>
-		
-		
+		</div> <!-- content -->
+</div> <!-- wrapper -->
+	<div id="footer">Copyright&copy; Whipple Recipes
+	</div> <!-- footer -->
+	
+	</body>
 	
 	
