finished up the document

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div id="wrapper">
 		<div id="header"><h1> <a href="">How to Make French Waffles</a></h1>
 			<div id="nav"><ul>
-				<li> <a href=#"what">What is French Waffles</a></li>
+				<li> <a href="index.html#what">What is French Waffles</a></li>
 				<li> <a href="#make">How to Make French Waffles</a></li>
 			</ul>
 			</div> <!-- nav -->
@@ -33,9 +33,10 @@
 				<li>Place waffle into pan and flip until it's a nice golden color</li>
 				<li>Let it cool and enjoy!</li>
 			</ol>
+			<p> <a href="about.html">Check out a recipe that will go great with French Waffles!</a></p>
 		</div> <!-- content -->
 </div> <!-- wrapper -->
-	<div id="footer">Copyright&copy; Whipple Recipes
+	<div id="footer">Copyright &copy; Whipple Recipes
 	</div> <!-- footer -->
 	
 	</body>
