--- a/about.html
+++ b/about.html
@@ -17,3 +17,8 @@
 			<p>Try frying a hot dog or sausage and use it as a side. It's quick, safe, and enjoyable for everyone, even kids can make it! Tastes good with syrup and a sure way to get your day started right.</p>
 			<p>Looking for other recipes? Go to this site and find what you're looking for! - <a href="https://www.google.com/">Google</a>
 		</div> <!-- content -->
+</div> <!-- wrapper -->
+	<div id="footer">Copyright &copy; Whipple Recipes
+	</div> <!-- footer -->
+	
+	</body>
