added all images and captions

--- a/whipple_kaneisha_lab3/image_optimizaion.html
+++ b/whipple_kaneisha_lab3/image_optimizaion.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 	<title>Image Optimization</title>
 	<meta charset="utf-8"/>
 	</head>
 	<body>
 		<h1>Image Optimization</h1>
-		<p><img src= "1.jpg" />This is a cd cover done in Designing Computer Graphics with Jeff Lang.</p>
+			<img src= "images/1.jpg" alt="cd cover." />
+		<p>This is a cd cover done in Designing Computer Graphics with Jeff Lang.</p>
+		
+			<img src= "images/whipple_kaneisha_ad.png" />
+		<p>This is an ad done in Designing Computer Graphics with Jeff Lang.</p>
+		
+			<img src= "images/logo.gif" alt="logo" />
+		<p>This is a logo designed for Applied Design Tools and Interfaces with Gus Hernandez</p>
 			
