--- a/whipple_kaneisha_lab3/image_optimizaion.html
+++ b/whipple_kaneisha_lab3/image_optimizaion.html
@@ -6,12 +6,12 @@
 	</head>
 	<body>
 		<h1>Image Optimization</h1>
-			<img src= "images/1.jpg" alt="cd cover." />
+			<img src= "images/1.jpg" alt="Javicia Leslie Cd cover." height="380px" width="420px" title="cd cover" />
 		<p>This is a cd cover done in Designing Computer Graphics with Jeff Lang.</p>
 		
-			<img src= "images/whipple_kaneisha_ad.png" />
+			<img src= "images/whipple_kaneisha_ad.png" alt="Orbits Ad" height="400px" width="300px" title="orbitz ad" />
 		<p>This is an ad done in Designing Computer Graphics with Jeff Lang.</p>
 		
-			<img src= "images/logo.gif" alt="logo" />
+			<img src= "images/logo.gif" alt="ShoeRunway Logo" height="300px" width="300px" title="logo" />
 		<p>This is a logo designed for Applied Design Tools and Interfaces with Gus Hernandez</p>
 			
