--- a/whipple_kaneisha_lab3/image_optimizaion.html
+++ b/whipple_kaneisha_lab3/image_optimizaion.html
@@ -9,7 +9,7 @@
 			<img src= "images/1.jpg" alt="Javicia Leslie Cd cover." height="380" width="420" title="cd cover" />
 		<p>This is a cd cover done in Designing Computer Graphics with Jeff Lang.</p>
 		
-			<img src= "images/whipple_kaneisha_ad.png" alt="Orbits Ad" height="400" width="300" title="orbitz ad" />
+			<img src= "images/whipple_kaneisha_ad.png" alt="Orbitz Ad for Traveling" height="400" width="300" title="orbitz ad" />
 		<p>This is an ad done in Designing Computer Graphics with Jeff Lang.</p>
 		
 			<img src= "images/logo.gif" alt="ShoeRunway Logo" height="300" width="300" title="logo" />
