--- a/whipple_kaneisha_lab3/video.html
+++ b/whipple_kaneisha_lab3/video.html
@@ -8,6 +8,7 @@
 		<h1>Designing Computer Graphics Explanation Video</h1>
 		<h2>Explaining the Ad Process</h2>
 			<p>The following video is an explanation of the thought process of coming up with the famous orbitz and Benihana ads by the designer Kaneisha Whipple</p>
+<!-- 			Start video content -->
 				<video controls width="640" height="480">
 					<source src="videos/whipple_kaneisha_movie.mp4.mp4" type="video/mp4" />
 					<source src="videos/whipple_kaneisha_movie.ogv" type="video/ogv" />
