added closing tags

--- a/whipple_kaneisha_lab3/image_optimizaion.html
+++ b/whipple_kaneisha_lab3/image_optimizaion.html
@@ -14,4 +14,6 @@
 		
 			<img src= "images/logo.gif" alt="ShoeRunway Logo" height="300" width="300" title="logo" />
 		<p>This is a logo designed for Applied Design Tools and Interfaces with Gus Hernandez</p>
+	</body>
+</html>
 			
