--- a/whipple_kaneisha_lab4/html5_check.html
+++ b/whipple_kaneisha_lab4/html5_check.html
@@ -2,7 +2,9 @@
 <html>
 	<head>
 		<title>HTML5 Review</title>
-		<meta>charset="utf-8"</meta>
+		<meta charset="utf-8" />
 	</head>
 	<body>
 		<h1>http://www.vogue.co.uk/</h1>
+			<p>This a fashion site. It shows all the latest trends in fashion and keeps up to date on what celebrities are wearing these days. It's one of the highest fashion sites in the world. After reviewing their markup I saw that they did use HTML5 structural elements correctly.
+			<img src="images/vogue.png" alt="Screenshot of Vogue British Website" />
