--- a/whipple_kaneisha_lab4/html5_check.html
+++ b/whipple_kaneisha_lab4/html5_check.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>HTML5 Review</title>
 		<meta charset="utf-8" />
 	</head>
 	<body>
-		<h1>http://www.vogue.co.uk/</h1>
-			<p>This a fashion site. It shows all the latest trends in fashion and keeps up to date on what celebrities are wearing these days. It's one of the highest fashion sites in the world. After reviewing their markup I saw that they did use HTML5 structural elements correctly.
-			<img src="images/vogue.png" alt="Screenshot of Vogue British Website" />
+	<header>
+		<h1>HTML5 Review</h1>
+			<p>The following are sites that needed to be reviewed to see if they have the proper HTML5 structural elements.
+	</header>
+		<h2><a href="http://www.vogue.co.uk/">Vogue</a></h2>
+			<p>This a fashion site. It shows all the latest trends in fashion and keeps up to date on what celebrities are wearing these days. It's one of the highest fashion sites in the world. After reviewing their markup I saw that they did use HTML5 structural elements correctly.</p>
+			<div><img src="images/vogue.png" alt="Screenshot of Vogue British Website" /></div>
+		
+		<h2><a href="http://massimoscucina.ca/">Massimo&#039;s Cucina Italiana</a></h2>
+			<p>This is a site for a restaurant. It shows what the restaurant is about and its menu along with contact information so you can reserve a table. It is a very high-end restaurant. After reviewing their markup I saw that they did use HTML5 structural elements correctly.</p>
+			<div><img src="images/restaurant.png" alt="Screenshot of Massimo&#039;s Cucina Italiana Website" /></div>
+			
+		<h2><a href="http://www.loafcreative.com/">Loaf Creative</a></h2>
+			<p>This is a site for a design company. This site is intended to be like a portfolio for them showing their previous work and the brands they've worked for. After reviewing their markup I saw that they did use HTML5 structural elements correctly.</p>
+			<div><img src="images/design.png" alt="Screenshot of Loaf Creative&#039;s Website" /></div>
+			
+		<h2><a href="http://www.alln1hob.com/#home">All-N-1 House of Beauty</a></h2>
+			<p>This is a site for a salon for women. The site tells the services they offer and examples of what they do and their contact information. After reviewing their markup I noticed they had some problems with their HTML5 structural elements. Their problems consisted of having an opening element like an article or a section then closing it without adding any headers to it. They can fix this problem by simply adding an header in the sections or articles before closing it.</p>
+			<div><img src="images/beauty.png" alt="Screenshot of All-N-1 House of Beauty&#039;s Website" /></div>
+		<footer>Copyright &copy; Whipple Industries</footer>
