added tfoot and validated

--- a/whipple_kaneisha_lab6/table.html
+++ b/whipple_kaneisha_lab6/table.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Tables</title>
+	</head>
 	<body>
 		<h1>Movie Cinema Showtimes</h1>
 	
@@ -11,11 +12,12 @@
 		<thead>
 			<tr>
 				<th>Movie</th>
-				<th>Showtimes</th>
+				<th colspan="4">Showtimes</th>
 			</tr>
 		</thead>
+		<tbody>
 		<tr>
-			<td>Silver Linings Playbook</th>
+			<td>Silver Linings Playbook</td>
 			<td>6:00</td>
 			<td>6:45</td>
 			<td>7:45</td>
@@ -42,4 +44,13 @@
 			<td>9:45</td>
 			<td>10:20</td>
 		</tr>
+		</tbody>
+		<tfoot>
+			<tr>
+				<td>Popcorn</td>
+				<td>$5.00</td>
+			</tr>
+		</tfoot>
 	</table>
+	</body>
+</html>
