--- a/whipple_kaneisha_lab6/table.html
+++ b/whipple_kaneisha_lab6/table.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<h1>Movie Cinema Showtimes</h1>
+		<p> These are the times for the movies that are playing this week.</p>
 	
 	<table>
 		<caption>Cinema Theaters</caption>
@@ -52,5 +53,6 @@
 			</tr>
 		</tfoot>
 	</table>
+		<h2>Tickets available online</h2>
 	</body>
 </html>
