--- a/whipple_kaneisha_lab6/form.html
+++ b/whipple_kaneisha_lab6/form.html
@@ -27,7 +27,7 @@
 			<input type="checkbox" name="music" value="electronic">Electronic<br>
 			<input type="checkbox" name="music" value="rock">Rock<br>
 			<input type="checkbox" name="music" value="other">Other
-		<h2>Customer Experience</h2>
+		<h2>Customer Experience</h2><!--- Second Half of survey --->
 			<p>How would you rate your experience at Music Load?</p>
 				<input type="radio" name="experience" value="excellent">Excellent<br> 
 				<input type="radio" name="experience" value="good">Good<br>
