--- a/whipple_kaneisha_lab6/table.html
+++ b/whipple_kaneisha_lab6/table.html
@@ -12,8 +12,8 @@
 		<caption>Cinema Theaters</caption>
 		<thead>
 			<tr>
-				<th>Movie</th>
-				<th colspan="4">Showtimes</th>
+				<th>Movie</th><!--- Column 1 --->
+				<th colspan="4">Showtimes</th><!-- Column 2 --->
 			</tr>
 		</thead>
 		<tbody>
