added submit button

--- a/whipple_kaneisha_lab7/html5_forms.html
+++ b/whipple_kaneisha_lab7/html5_forms.html
@@ -8,7 +8,7 @@
 		<h1>Music Load</h1>
 			<p>Sign up to become a member of Music Load's exclusive V.I.P group!</p>
 				<p>Name: <input type="text" name="name" autofocus="autofocus"></p>
-				Email:<input type="email" name="email_address" />
+				Email*:<input type="email" name="email_address" required="required" />
 				<p>Phone (used for when your orders arrive):<input type="tel" name="phone" /></p>
 				<p>What is the best time to contact you?
 					<input type="time" name="call_time" /></p>
@@ -31,5 +31,6 @@
 				<p>Search for your favorite styles:<input type="search" name="search_site" placeholder="Search Music Load" /></p>
 				<p>Enter your website's URL<input type="url" name="website" /></p>
 				<p>Enter a password <input type="text" required="required" /></p>
+				<input type="submit" value="Submit">
 				
 				
