fixed validation errors

--- a/whipple_kaneisha_lab7/html5_forms.html
+++ b/whipple_kaneisha_lab7/html5_forms.html
@@ -15,9 +15,9 @@
 				<p>What is the best way to reach you?</p>
 				<input list="mydata" />
 				<datalist id="mydata">
-					<option value="By Phone" value"phone">
-					<option value="By Email" value"email">
-					<option value="By Text" value"text">
+					<option label="By Phone" value="phone">
+					<option label="By Email" value="email">
+					<option label="By Text" value="text">
 				</datalist>
 				<p>Date of birth:
 					<input type="date" name="birthday" /></p>
@@ -32,5 +32,7 @@
 				<p>Enter your website's URL<input type="url" name="website" /></p>
 				<p>Enter a password <input type="text" required="required" /></p>
 				<input type="submit" value="Submit">
+	</body>
+</html>
 				
 				
