--- a/whipple_kaneisha_lab7/rss_link.html
+++ b/whipple_kaneisha_lab7/rss_link.html
@@ -5,25 +5,25 @@
 		<title>Movie Reviews</title>
 	</head>
 	<body>
-		<h1>Movie Reviews</h2>
+		<h1>Movie Reviews</h1>
 			<section>
 				<article>
-					<title>Django Unchained</title>
-					<link>http://unchainedmovie.com/</link>
+					<h2><a href="http://unchainedmovie.com/">Django Unchained</a></h2>
 					<p>This is about a slave who was freed but a government official and goes on a search for his wife who was beaten and taken to a well known slave land.</p>
 				</article>
 				<article>
-					<title>Silver Linings Playbook</title>
-					<link>http://silverliningsplaybookmovie.com/</link>
+					<h2><a href="http://silverliningsplaybookmovie.com/">Silver Linings Playbook</a></h2>
 					<p>This is about two people who are recovering addicts. They fall in love even though it was unlikely and they go through obstacles along the way.</p>
 				</article>
 				<article>
-					<title>Beautiful Creatures</title>
-					<link>http://beautifulcreatures.warnerbros.com/</link>
+					<h2><a href="http://beautifulcreatures.warnerbros.com/">Beautiful Creatures</a></h2>
 					<p>This is about a teenage girl who is destined to become evil because of her family lineage but she falls in love with a handsome young man and her family does everything they can to tear them apart so she can become the evil nasty creature she was destined to be.</p>
 				</article>
 				<article>
-					<title>Snitch</title>
-					<link>http://www.snitch-movie.com/</link>
+					<h2><a href="http://www.snitch-movie.com/">Snitch</a></h2>
 					<p>This is about a man who's son is put in jail for a crime he didn't commit. The father goes on a search to help uncover the truth in this drama and action filled movie. Dwayne Johnson is starring in this 4 star movie.</p>
-				</article>		
+				</article>
+			</section>
+				<h3><a href="reviews.xml">Subscribe</a></h3>
+	</body>
+</html>	
