added final attributes

--- a/whipple_kaneisha_lab8/form.html
+++ b/whipple_kaneisha_lab8/form.html
@@ -21,7 +21,7 @@
 			</select>
 	<fieldset>
 		<legend>Music Choice</legend>
-		<p>What type of music do you listen to? (Check all that apply)</p>
+		<label>What type of music do you listen to? (Check all that apply)</label>
 			<input type="checkbox" name="music" value="rap/hip-hop">Rap/Hip-Hop<br>
 			<input type="checkbox" name="music" value="country">Country<br>
 			<input type="checkbox" name="music" value="pop">Pop<br>
@@ -31,7 +31,7 @@
 			<input type="checkbox" name="music" value="other">Other
 	</fieldset>
 		<h2>Customer Experience</h2>
-			<p>How would you rate your experience at Music Load?</p>
+			<label>How would you rate your experience at Music Load?</label>
 				<input type="radio" name="experience" value="excellent">Excellent<br> 
 				<input type="radio" name="experience" value="good">Good<br>
 				<input type="radio" name="experience" value="Horrible">Horrible
@@ -39,9 +39,9 @@
 				<input type="radio" name="issues" value="yes">Yes<br>
 				<input type="radio" name="issues" value="no">No
 		<h3>Comments</h3>
-			<p>Do you have any questions, comments, or concerns in regards to anything Music Load?</p>
+			<label>Do you have any questions, comments, or concerns in regards to anything Music Load?</label>
 				<textarea rows="4" cols="50"></textarea>
-			<br><input type="submit" value="Submit">
+			<br><input type="submit" value="Submit" title="This is where you submit your form">
 	</form>
 	</body>
 </html>
