--- a/whipple_kaneisha_lab8/table.html
+++ b/whipple_kaneisha_lab8/table.html
@@ -11,8 +11,8 @@
 		<caption>Cinema Theaters</caption>
 		<thead>
 			<tr>
-				<th>Movie</th>
-				<th colspan="4">Showtimes</th>
+				<th scope="col">Movie</th>
+				<th scope="col"colspan="4">Showtimes</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -52,5 +52,7 @@
 			</tr>
 		</tfoot>
 	</table>
+		<p>Star of the week</p>
+			<p><img src="images/300.jpg" alt="The star of the week is cute kitten" /></p>
 	</body>
 </html>
