--- a/whipple_kaneisha_lab8/form.html
+++ b/whipple_kaneisha_lab8/form.html
@@ -36,11 +36,11 @@
 		<h2>Customer Experience</h2>
 			<label>How would you rate your experience at Music Load?</label>
 				<label for="excellent"><input type="radio" name="experience" value="excellent" id="excellent">Excellent</label><br> 
-				<label for="good"><input type="radio" name="experience" value="good" id="good">Good<br>
-				<label for="horrible"><input type="radio" name="experience" value="Horrible" id="horrible">Horrible
+				<label for="good"><input type="radio" name="experience" value="good" id="good">Good<br></label>
+				<label for="horrible"><input type="radio" name="experience" value="Horrible" id="horrible">Horrible</label>
 			<p>If you had any issues were they resolved?</p>
-				<label for="yes"><input type="radio" name="issues" value="yes" id="yes">Yes<br>
-				<label for="no"><input type="radio" name="issues" value="no" id="no">No
+				<label for="yes"><input type="radio" name="issues" value="yes" id="yes">Yes<br></label>
+				<label for="no"><input type="radio" name="issues" value="no" id="no">No</label>
 	</fieldset>
 		<h3>Comments</h3>
 			<label for="comment">Do you have any questions, comments, or concerns in regards to anything Music Load?</label>
