--- a/whipple_kaneisha_lab8/accessibility_check.html
+++ b/whipple_kaneisha_lab8/accessibility_check.html
@@ -10,17 +10,17 @@
 			<p>The following are sites that needed to be reviewed to see if they have the proper HTML5 structural elements.
 	</header>
 		<h2><a href="http://www.alicedrougard.com/">Alice Drougard</a></h2>
-			<p>This a portfolio site for Alice Drougard. She is an industrial product designer and this site shows off the work that she's done. After reviewing her site she had errors pertaining to keyboard accessibility where she has to fix not having an onblur on the script. She had an invalid language code and that can be fixed by identifying the document. She also has to put an text on her alt tag to describe the function and purpose of the image.</p>
-			<div><img src="images/vogue.png" alt="Screenshot of Vogue British Website" /></div>
+			<p>This a portfolio site for Alice Drougard. She is an industrial product designer and this site shows off the work that she's done. After checking the site's accessibility I found she had errors pertaining to keyboard accessibility where she has to fix not having an onblur on the script. She had an invalid language code and that can be fixed by identifying the document. She also has to put an text on her alt tag to describe the function and purpose of the image.</p>
+			<div><img src="images/alice.png" alt="Screenshot of Alice Drougard&#039;s Website" /></div>
 		
-		<h2><a href="http://massimoscucina.ca/">Massimo&#039;s Cucina Italiana</a></h2>
-			<p>This is a site for a restaurant. It shows what the restaurant is about and its menu along with contact information so you can reserve a table. It is a very high-end restaurant. After reviewing their markup I saw that they did use HTML5 structural elements correctly.</p>
-			<div><img src="images/restaurant.png" alt="Screenshot of Massimo&#039;s Cucina Italiana Website" /></div>
+		<h2><a href="http://chop-chop.org/">Chop-Chop</a></h2>
+			<p>This site is a xhtml converter. It turns psd's into xhtml. After checking the site's accessibility I found there were no errors.</p>
+			<div><img src="images/converter.png" alt="Screenshot of Chop-Chop&#039;s Website" /></div>
 			
-		<h2><a href="http://www.loafcreative.com/">Loaf Creative</a></h2>
-			<p>This is a site for a design company. This site is intended to be like a portfolio for them showing their previous work and the brands they've worked for. After reviewing their markup I saw that they did use HTML5 structural elements correctly.</p>
-			<div><img src="images/design.png" alt="Screenshot of Loaf Creative&#039;s Website" /></div>
+		<h2><a href="http://markup.io/">Markup</a></h2>
+			<p>This is a site that lets you take a shape and put it in your toolbar so you can use it to draw on any web page later. After checking the site's accessibility I found it had errors because the images didn't have an alt attribute. To fix that all they need to do is add an alt attribute so screen readers can tell what the image is. They also didn't have their headers in order which was the cause of another error. Finally they had a language error which all they need to do is identify the language that they're using.</p>
+			<div><img src="images/markup.png" alt="Screenshot of Markup&#039;s Website" /></div>
 			
-		<h2><a href="http://www.alln1hob.com/#home">All-N-1 House of Beauty</a></h2>
-			<p>This is a site for a salon for women. The site tells the services they offer and examples of what they do and their contact information. After reviewing their markup I noticed they had some problems with their HTML5 structural elements. Their problems consisted of having an opening element like an article or a section then closing it without adding any headers to it. They can fix this problem by simply adding an header in the sections or articles before closing it.</p>
-			<div><img src="images/beauty.png" alt="Screenshot of All-N-1 House of Beauty&#039;s Website" /></div>
+		<h2><a href="http://allisonhou.se/">Allison House</a></h2>
+			<p>This is a site for an interface designer named Allison. It's more like a contact site for you to reach her and a blog to ask her questions. After checking the site's accessibility I found her site has no errors. I guess that makes her a good designer!</p>
+			<div><img src="images/allison.png" alt="Screenshot of Allison House&#039;s Website" /></div>
