--- a/whipple_kaneisha_lab8/accessibility_check.html
+++ b/whipple_kaneisha_lab8/accessibility_check.html
@@ -7,7 +7,7 @@
 	<body>
 	<header>
 		<h1>Accessibility Check</h1>
-			<p>The following are sites that needed to be reviewed to see if they have the proper HTML5 structural elements.
+			<p>The following are sites that needed to be reviewed to see if they are accessible for people with disabilities.</p>
 	</header>
 		<h2><a href="http://www.alicedrougard.com/">Alice Drougard</a></h2>
 			<p>This a portfolio site for Alice Drougard. She is an industrial product designer and this site shows off the work that she's done. After checking the site's accessibility I found she had errors pertaining to keyboard accessibility where she has to fix not having an onblur on the script. She had an invalid language code and that can be fixed by identifying the document. She also has to put an text on her alt tag to describe the function and purpose of the image.</p>
@@ -24,3 +24,5 @@
 		<h2><a href="http://allisonhou.se/">Allison House</a></h2>
 			<p>This is a site for an interface designer named Allison. It's more like a contact site for you to reach her and a blog to ask her questions. After checking the site's accessibility I found her site has no errors. I guess that makes her a good designer!</p>
 			<div><img src="images/allison.png" alt="Screenshot of Allison House&#039;s Website" /></div>
+	</body>
+</html>
