--- a/whipple_kaneisha_lab8/form.html
+++ b/whipple_kaneisha_lab8/form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Forms</title>
+		<title>Survey for Music Load&#039;s Contest</title>
 	</head>
 	<body id="body">
 		<h1>Music Load Survey</h1>
